k8s/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: pinelab
  labels:
    name: pinelab
    environment: production
